--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalendarAdapter.cs" />
     <Compile Include="Dal.cs" />
     <Compile Include="HelperClass.cs" />
     <Compile Include="IDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrafficAdapter.cs" />
+    <Compile Include="WebAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DP\DP.csproj">
