--- a/DP/DP.csproj
+++ b/DP/DP.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calendar.cs" />
     <Compile Include="FlightDetails.cs" />
     <Compile Include="FlightVisibleInfo.cs" />
     <Compile Include="FlightSummarize.cs" />
